refact: metadado da descrição

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Venha garantir o seu ingresso para os melhores filmes na melhor plataforma de venda de ingressos on-line"
     />
 
     <title>CineTicket</title>
